--- a/Modules/GatePass/composer.json
+++ b/Modules/GatePass/composer.json
@@ -10,14 +10,12 @@
     "extra": {
         "laravel": {
             "providers": [],
-            "aliases": {
-
-            }
+            "aliases": {}
         }
     },
     "autoload": {
         "psr-4": {
-            "Modules\\GatePass\\": ""
+            "Modules\\Gatepass\\": ""
         }
     }
 }
