Update occupant module

--- a/modules/Occupant/composer.json
+++ b/modules/Occupant/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "nwidart/occupant",
+    "name": "solomon-ochepa/tenant",
     "description": "",
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "Solomon Ochepa",
+            "email": "solomonochepa@gmail.com"
         }
     ],
     "extra": {
